crates/ohno_macros_impl/tests/snapshots/public_api__every_struct_shape_generates_its_items.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === named struct ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("path", &self.path)
            .field("inner", &self.inner)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(path: impl ::core::convert::Into<String>) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === tuple struct ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.1.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.1.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.1, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.1.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.1.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_tuple("T").field(&self.0).field(&self.1).finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(param_0: impl ::core::convert::Into<String>) -> Self {
        Self(param_0.into(), ::ohno::OhnoCore::default())
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        param_0: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self(param_0.into(), ::ohno::OhnoCore::from(error))
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === a lone core takes no constructor parameters ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T").field("inner", &self.inner).finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new() -> Self {
        Self {
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === a core in the middle keeps declaration order ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T")
            .field("first", &self.first)
            .field("inner", &self.inner)
            .field("last", &self.last)
            .finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(
        first: impl ::core::convert::Into<String>,
        last: impl ::core::convert::Into<u32>,
    ) -> Self {
        Self {
            first: first.into(),
            inner: ::ohno::OhnoCore::default(),
            last: last.into(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        first: impl ::core::convert::Into<String>,
        last: impl ::core::convert::Into<u32>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            first: first.into(),
            inner: ::ohno::OhnoCore::from(error),
            last: last.into(),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === a marked core need not be named OhnoCore ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.mine.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.mine.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.mine, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.mine.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.mine.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T").field("path", &self.path).field("mine", &self.mine).finish()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new(path: impl ::core::convert::Into<String>) -> Self {
        Self {
            path: path.into(),
            mine: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        path: impl ::core::convert::Into<String>,
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            path: path.into(),
            mine: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
