crates/ohno_macros_impl/tests/snapshots/public_api__the_error_attribute_adds_a_core_to_every_struct_shape.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === named struct ===
#[derive(::ohno::Error)]
struct T {
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === a colliding core name is numbered ===
#[derive(::ohno::Error)]
struct T {
    ohno_core: u32,
    ohno_core_1: u32,
    /// ohno::generated-core@7f3d9c2a
    ohno_core_2: ::ohno::OhnoCore,
}

// === tuple struct gains a trailing core ===
#[derive(::ohno::Error)]
struct T(
    String,
    /// ohno::generated-core@7f3d9c2a
    ::ohno::OhnoCore,
);

// === unit struct becomes a tuple struct ===
#[derive(::ohno::Error)]
struct T(
    /// ohno::generated-core@7f3d9c2a
    ::ohno::OhnoCore,
);
