crates/ohno_macros_impl/tests/snapshots/public_api__the_error_attribute_leaves_the_authors_own_attributes_alone.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === docs and derives on the struct survive ===
#[derive(::ohno::Error)]
/// Documentation for T.
#[derive(Clone)]
#[display("failed for {path}")]
struct T {
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === an ordinary doc comment on a field survives ===
#[derive(::ohno::Error)]
struct T {
    /// Where the failure happened.
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === a doc comment that merely mentions the marker is not the marker ===
#[derive(::ohno::Error)]
struct T {
    /// The ohno generated core field is not this one.
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === a non-doc attribute carrying the marker text is not the marker ===
#[derive(::ohno::Error)]
struct T {
    #[other = " ohno::generated-core@7f3d9c2a"]
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === a doc attribute with a non-string value is not the marker ===
#[derive(::ohno::Error)]
struct T {
    #[doc = 1]
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}

// === a doc attribute built by a macro is not the marker ===
#[derive(::ohno::Error)]
struct T {
    #[doc = concat!(" ohno::generated-core@7f3d9c2a")]
    path: String,
    /// ohno::generated-core@7f3d9c2a
    ohno_core: ::ohno::OhnoCore,
}
