crates/ohno_macros_impl/tests/snapshots/public_api__the_suppressing_flags_remove_their_items.snap
---
source: crates/ohno_macros_impl/tests/public_api.rs
expression: output
---
// === no_debug drops the Debug impl ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
#[automatically_derived]
impl T {
    /// Creates the error with no source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn new() -> Self {
        Self {
            inner: ::ohno::OhnoCore::default(),
        }
    }
    /// Creates the error wrapping `error` as its source.
    #[allow(
        dead_code,
        reason = "generated for every error type, used at the author's discretion"
    )]
    pub(crate) fn caused_by(
        error: impl ::core::convert::Into<
            ::std::boxed::Box<
                dyn ::std::error::Error + ::core::marker::Send + ::core::marker::Sync,
            >,
        >,
    ) -> Self {
        Self {
            inner: ::ohno::OhnoCore::from(error),
        }
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === no_constructors drops new and caused_by ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
impl ::core::fmt::Debug for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        f.debug_struct("T").field("inner", &self.inner).finish()
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}

// === both together ===
#[automatically_derived]
impl ::core::fmt::Display for T {
    fn fmt(&self, f: &mut ::core::fmt::Formatter<'_>) -> ::core::fmt::Result {
        self.inner.format_error(f, "T", ::core::option::Option::None)
    }
}
#[automatically_derived]
impl ::std::error::Error for T {
    fn source(&self) -> ::core::option::Option<&(dyn ::std::error::Error + 'static)> {
        self.inner.source()
    }
}
#[automatically_derived]
impl ::ohno::Enrichable for T {
    fn add_enrichment(&mut self, entry: ::ohno::EnrichmentEntry) {
        ::ohno::Enrichable::add_enrichment(&mut self.inner, entry);
    }
}
#[automatically_derived]
impl ::ohno::ErrorExt for T {
    fn message(&self) -> ::std::string::String {
        self.inner.format_message("T", ::core::option::Option::None)
    }
    fn backtrace(&self) -> &::std::backtrace::Backtrace {
        self.inner.backtrace()
    }
}
#[automatically_derived]
impl ::core::convert::From<::core::convert::Infallible> for T {
    fn from(_value: ::core::convert::Infallible) -> Self {
        ::core::unreachable!("Infallible cannot be constructed")
    }
}
